[gd_scene load_steps=3 format=3 uid="uid://b1w2x3y4z5a6"]

[ext_resource type="Script" path="res://scripts/ui/CardUI.gd" id="1_card_ui"]
[ext_resource type="StyleBox" uid="uid://caste4l2d7g8x" path="res://assets/theme/card_panel_style.tres" id="2_style"]

[node name="Card" type="Button"]
custom_minimum_size = Vector2(160, 220)
focus_mode = 0
mouse_filter = 1
theme_override_styles/normal = ExtResource("2_style")
theme_override_styles/hover = ExtResource("2_style")
theme_override_styles/pressed = ExtResource("2_style")
theme_override_styles/disabled = ExtResource("2_style")
theme_override_styles/focus = ExtResource("2_style")
script = ExtResource("1_card_ui")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Card Name"
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "9"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ArtRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="TextLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "This is the card's description text. It does something cool and has a lot of text."
autowrap_mode = 3
